k8s-235/apps/pomerium/overlays/prod/resources/middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: forward-auth
spec:
  forwardAuth:
    address: https://pomerium-proxy.pomerium.svc.cluster.local
    tls:
      insecureSkipVerify: true
    trustForwardHeader: true
    authResponseHeaders:
      - X-Pomerium-Jwt-Assertion
