k8s-235/apps/pomerium/overlays/prod/resources/ingress.yaml
---
# Source: pomerium/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pomerium
  labels:
    app.kubernetes.io/name: pomerium
spec:
  tls:
  - secretName: pomerium-tls
    hosts:
    - sso.k8s.235.tdude.co
  rules:
  - host: sso.k8s.235.tdude.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pomerium-authenticate
            port:
              name: https
